--- a/subgraph.yaml
+++ b/subgraph.yaml
@@ -1,4 +1,4 @@
-specVersion: 0.0.1
+specVersion: 0.0.2
 schema:
   file: ./schema.graphql
 dataSources:
@@ -8,6 +8,7 @@ dataSources:
     source:
       address: "0x85C4aE348D35784f6f28b3ffAce7cb1629d5126c"
       abi: Pseudopops
+      startBlock: 20183619
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.5
